# django-bookr

./: .gitignore  README.md  pip_requirements.txt  setup.cfg
bookr/: admin.py  manage.py
bookr/bookr/: settings.py  urls.py  views.py
bookr/reviews/: admin.py  api_views.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
bookr/reviews/management/commands/: WebDevWithDjangoData.csv  loadcsv.py
bookr/reviews/migrations/: 0001_initial.py  0002_book_contributor_review_bookcontributor_and_more.py
bookr/reviews/templates/: base.html  search-results.html
bookr/reviews/templates/reviews/: books_list.html
bookr/static/: main.css
bookr/templates/: base.html  instance_form.html  profile.html  search_results.html
bookr/templates/registration/: login.html
bookr/templates/reviews/: base.html  book_details.html  books_list.html
