[metadata]
name = django-bookr
description = A book review django app
long_description = file: README.md
long_description_content_type = text/markdown
author =  Víctor Auñón
author_email = hola@victoraunon.com
license = MIT
url = https://github.com/victor-aunon/django-bookr
classifiers = 
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
packages = bookr
install_requires = 
    Django>=4.1.5
    flake8>=6
    black>=22.12.0
    djangorestframework>=3.14
    django-configurations>=2.4
python_requires = >=3.10
package_dir = 
    = bookr
zip_safe = no

[flake8]
max-line-length = 88
extend-ignore = E203
